fixed horizontal scroll on media queries

--- a/css/index.css
+++ b/css/index.css
@@ -162,7 +162,8 @@ body {
     width: 100%;   
     border-bottom: 2px solid gray;
     border-top: 4%;   
-}
+} 
+/* bottom 3  */
 .Services {
     
     width: 30%;
@@ -377,11 +378,12 @@ hr {
     }
     .nav a {
         justify-content: space-between;
-        padding: 4%;
+        padding: 3%;
 
     }
    .container {
         flex-direction: column;
+        max-width: 100%;
         
         align-items: center;
     }
@@ -393,11 +395,14 @@ hr {
         justify-content: center;
     }
     .content {
-        margin: 1%;
+        margin: 4%;
         border-top: 1px solid gray;
         display: flex;
         height: 20%;
         width: 100%; 
+    }
+    .middle-img {
+        max-width: 100%;
     }
     .About {
         padding: 1%;
@@ -451,7 +456,7 @@ hr {
     .container {
         margin: 0%;
         margin-bottom: 0%; 
-          
+        max-width: 100%;  
     }
     .nav {
    
